tests/base/invalid/Byte_Invalid_1.whiley
import * from whiley.lang.*

void ::main(System.Console sys,[string] args):
    b = 01b
    i = b * 2
    sys.out.println(Any.toString(i))
